--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -6,5 +6,5 @@
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
-    background: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.7)) ,url('https://jdinstituteoffashiontechnology.com/wp-content/uploads/2021/08/interior-designer-career.jpeg');
+    background: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0)) ,url('https://jdinstituteoffashiontechnology.com/wp-content/uploads/2021/08/interior-designer-career.jpeg');
 }
