--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -1,10 +1,10 @@
 .loginScreen {
-  width: 1300px;
+  width: 1420px;
   top: -110px;
-  height: 560px;
+  height: 670px;
   left: -160px;
   background: linear-gradient(rgb(24, 23, 23, 0.6), rgb(35, 42, 35, 0.7)),
-    url("https://www.pixelstalk.net/wp-content/uploads/images6/4K-City-Wallpaper-HD-Free-download.jpg");
+    url("../../public/HD-wallpaper-new-york-city-wide-8k-new-york-world-city-buildings-graphy.jpg");
   position: absolute;
   background-position: center;
   background-repeat: no-repeat;
@@ -19,48 +19,48 @@
   width: 400px;
 }
 .form-group2 {
-    position: relative;
-    left: 850px;
-    top: 150px;
-    color: white;
-    width: 400px;
-  }
-.form-group input{
-    width: 220px;
-    height: 35px;
-    margin: 10px;
-    border: none;
-    outline: none;
-    background-color: rgb(239, 241, 242,0.3);
-    border: 1px solid white;
-    border-radius: 5px;
-    color: rgb(255, 255, 255);
-    font-size: 16px;
-    padding-left: 3px;
+  position: relative;
+  left: 850px;
+  top: 150px;
+  color: white;
+  width: 400px;
 }
-.form-group2 input{
-    width: 220px;
-    height: 35px;
-    margin: 15px;
-    border: none;
-    outline: none;
-    background-color: rgb(239, 241, 242,0.3);
-    border: 1px solid white;
-    border-radius: 5px;
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-    padding-left: 3px;
+.form-group input {
+  width: 220px;
+  height: 35px;
+  margin: 10px;
+  border: none;
+  outline: none;
+  background-color: rgb(239, 241, 242, 0.3);
+  border: 1px solid white;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  padding-left: 3px;
 }
-.loginButton{
-    width: 220px;
-    height: 35px;
-    margin: 15px;
-    border: none;
-    outline: none;
-    background-color: rgb(0, 187, 255); 
-    position: relative;
-    left: 920px;
-    top: 150px;
-    color: white;
-    border-radius: 5px;
+.form-group2 input {
+  width: 220px;
+  height: 35px;
+  margin: 15px;
+  border: none;
+  outline: none;
+  background-color: rgb(239, 241, 242, 0.3);
+  border: 1px solid white;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  padding-left: 3px;
+}
+.loginButton {
+  width: 220px;
+  height: 35px;
+  margin: 15px;
+  border: none;
+  outline: none;
+  background-color: rgb(0, 187, 255);
+  position: relative;
+  left: 920px;
+  top: 150px;
+  color: white;
+  border-radius: 5px;
 }
