--- a/src/Pages/Details.css
+++ b/src/Pages/Details.css
@@ -4,7 +4,7 @@
     color: white;
     padding-left: 50px;
     padding-top: 50px;
-    background: linear-gradient(rgb(0, 0, 0),rgba(0, 0, 0, 0.8)), url('https://images.squarespace-cdn.com/content/v1/5f401610829d211aa16190e7/61a315de-88d5-47a4-a4c5-10663ec1e3f0/maurizio-pellizzoni-luxury-interior-designer-london.jpeg?format=1000w')
+    background: linear-gradient(rgb(0, 0, 0),rgba(0, 0, 0, 0.8)), url('https://assets.hongkiat.com/uploads/nature-photography/autumn-poolside.jpg')
 }
 .details{
     color: red;
